[gd_scene load_steps=4 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 50.0
height = 100.0

[sub_resource type="CapsuleShape2D" id=2]
height = 180.0

[node name="Player" type="Node2D"]
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="NearbyArea" type="Area2D" parent="."]
collision_mask = 2

[node name="NearbyCollisionShape2D" type="CollisionShape2D" parent="NearbyArea"]
rotation = 1.5708
shape = SubResource( 1 )

[node name="PlayerCamera" type="Camera2D" parent="."]
position = Vector2( 0, -93.928 )
offset = Vector2( 0, -120 )
current = true
smoothing_enabled = true

[node name="Destination" type="Polygon2D" parent="."]
polygon = PoolVector2Array( -12.3397, -1.5199, 9.07892, 1, 5.29919, 6.03967, -12.3397, 8.55951 )

[node name="CamRemoteTransform2D" type="RemoteTransform2D" parent="."]

[node name="NearbyAreaRemoteTransform2D" type="RemoteTransform2D" parent="."]

[node name="vehicleCollider" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 2 )
disabled = true
